# jupyter-notebooks

./: .gitignore  README.md  pyproject.toml
notebook/: ocr-example.ipynb
src/: ipython_helpers.py  main.py  ocr_helpers.py
